Fixed reintroduced 'featured' bug when viewing people Update carousel a bit, make thumbnail a stretched BG image Set autopaginate to 10 instead of 4

--- a/geonode/static/sopac.css
+++ b/geonode/static/sopac.css
@@ -24,6 +24,13 @@
 	border-width: 1px;
 }
 
+.carousel-thumb-background {
+	width: 300px;
+	height: 150px;
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+}
+
 .carousel-control {
 	font-size: 37px;
 }
